# yuki

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  flake.nix  flash.nix  img.raw
.cargo/: config.toml
src/: layout.rs  main.rs  mouse.rs  oled.rs
yuki_pcb/: fp-info-cache  fp-lib-table  sym-lib-table  yuki_pcb.kicad_pcb  yuki_pcb.kicad_prl  yuki_pcb.kicad_pro  yuki_pcb.kicad_sch  yuki_pcb_V01.kicad_pcb  yuki_pcb_V01.kicad_prl  yuki_pcb_V01.kicad_pro  ~yuki_pcb.kicad_pcb.lck
yuki_pcb/libraries/YUKI/: YUKI.kicad_sym
yuki_pcb/libraries/YUKI.pretty/: CherryMX_rev.kicad_mod  Kailh_Choc_PG1350_rev.kicad_mod  MJ-4PP-9_Cantor_MX_TX-RX_Crossover.kicad_mod  OLED.kicad_mod  RUST_GEAR.kicad_mod  SNOWFLAKE.kicad_mod  SNOWFLAKE_SMALL.kicad_mod  YUKI_YAAJ_WeAct_BlackPill_2.kicad_mod
yuki_pcb/libraries/keyswitches.pretty/: SW_MX_reversible.kicad_mod
yuki_pcb/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
